# FastFacebookBuyPlatform

./: .env.example  .gitignore  AGENTS.md  COMPLETE_PLAN.md  DEAL_RADAR_PLAN.md  README.md  marketplace-deal-platform-plan.md
backend/: .dockerignore  .env.example  .gitignore  README.md  requirements.txt
backend/apps/api/: pyproject.toml
backend/apps/api/app/: __init__.py  main.py
backend/apps/api/app/api/: __init__.py  routes.py
backend/apps/api/app/application/: __init__.py  metrics.py  pipeline.py
backend/apps/api/app/core/: config.py  migrations.py
backend/apps/api/app/modules/: __init__.py
backend/apps/api/app/modules/arbitrage/: service.py
backend/apps/api/app/modules/auth/: __init__.py  repository.py  security.py  service.py
backend/apps/api/app/modules/deals/: service.py
backend/apps/api/app/modules/ingestion/: __init__.py
backend/apps/api/app/modules/listings/: __init__.py
backend/apps/api/app/modules/normalization/: __init__.py  service.py
backend/apps/api/app/modules/pricing/: service.py
backend/apps/api/app/modules/semantic_cache/: service.py
backend/apps/api/app/modules/source_policy/: __init__.py
backend/apps/api/app/shared/: __init__.py  errors.py  schemas.py
backend/apps/api/db/migrations/: 001_init_users.sql
backend/apps/api/prisma/: schema.prisma
backend/apps/api/prisma/migrations/0001_init_users/: migration.sql
backend/apps/api/tests/: test_api.py
deal-radar/: .env.example  README.md
frontend/: .env.example  PLAN.md  README.md  package-lock.json  package.json
landing/: .env.example  README.md
(+123 files in other folders)
